--- a/Tools/DtTemplates/PrjTemplate/Wasm/Wasm.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Wasm/Wasm.csproj
@@ -8,16 +8,16 @@
 		<UseWasmTools>true</UseWasmTools>
 		
 		<!-- 必须sdk完整路径，避免总下载失败 -->
-        <NetCoreWasmSDKUri>d:\dt\Package\wasm\dotnet-runtime-wasm-windows-633c7b6-0cee4aaff9c-3338312971-Sqlite.zip</NetCoreWasmSDKUri>
+		<NetCoreWasmSDKUri>d:\dt\Packages\wasm\dotnet-runtime-wasm-windows-633c7b6-0cee4aaff9c-3338312971-Sqlite.zip</NetCoreWasmSDKUri>
 
-        <!-- 默认Interpreter -->
+		<!-- 默认Interpreter -->
         <!--<WasmShellMonoRuntimeExecutionMode>FullAOT</WasmShellMonoRuntimeExecutionMode>-->
     </PropertyGroup>
 
 	<Import Project="..\Common.props" />
-
+	<Import Project="..\RefAll.props" />
+	
 	<ItemGroup>
-		<ProjectReference Include="..\$ext_safeprojectname$.Client\$ext_safeprojectname$.Client.csproj" />
 		<PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.19" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.19" />
 		<!-- 不引用link出错 -->
