--- a/Tools/DtTemplates/PrjTemplate/iOS/iOS.csproj
+++ b/Tools/DtTemplates/PrjTemplate/iOS/iOS.csproj
@@ -9,10 +9,7 @@
 	</PropertyGroup>
 
 	<Import Project="..\Common.props" />
-
-	<ItemGroup>
-		<ProjectReference Include="..\$ext_safeprojectname$.Client\$ext_safeprojectname$.Client.csproj" />
-	</ItemGroup>
+	<Import Project="..\RefAll.props" />
 
 	<ItemGroup>
 		<Page Include="..\$ext_safeprojectname$.Win\App.xaml" Link="App.xaml" />
