--- a/Client/Common.props
+++ b/Client/Common.props
@@ -9,8 +9,8 @@
         <!-- release不输出pbd调试信息 -->
         <DebugType Condition="'$(Configuration)'=='Release'">none</DebugType>
         <BaseOutputPath>..\build</BaseOutputPath>
-        <!--xbf嵌入到pri文件-->
-        <!--<DisableEmbeddedXbf>false</DisableEmbeddedXbf>-->
+        <!-- 始终禁止xbf嵌入到pri文件，默认debug时不嵌入，release时嵌入，嵌入时包升级会造成引用项目都必须重新编译 -->
+        <DisableEmbeddedXbf>true</DisableEmbeddedXbf>
     </PropertyGroup>
 
     <!-- 定义平台常量 -->
@@ -36,7 +36,7 @@
 
     <!-- 公共引用包 -->
     <ItemGroup>
-        <PackageReference Include="Dt.Infras" Version="3.0.1" />
+        <PackageReference Include="Dt.Infras" Version="3.0.2" />
         <PackageReference Include="Dt.BuildTools" Version="1.3.4" PrivateAssets="none" />
         <!--高于7.0.9时wasm出错-->
         <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.9" />
@@ -60,7 +60,7 @@
 
     <!-- windows引用包 -->
     <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.230913002" PrivateAssets="none" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231008000" PrivateAssets="none" />
         <!-- Toast参数启动引用 -->
         <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     </ItemGroup>
