--- a/Client/Package.props
+++ b/Client/Package.props
@@ -5,6 +5,8 @@
         <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
         <!-- 打包时包含pdb文件，用于调试 -->
         <AllowedOutputExtensionsInPackageBuildOutputFolder Condition="'$(Configuration)'=='Debug'">$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+        <!--打包时复制重复dll警告-->
+        <NoWarn>$(NoWarn);NU5118</NoWarn>
     </PropertyGroup>
     
 	<!-- 包公共属性 -->
@@ -22,8 +24,8 @@
         <ItemGroup>
             <!-- 打包引用项目的文件 -->
             <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
-            <!-- 将本项目输出目录的所有子目录内容打包，写法保证只复制子目录不重复复制文件，自创，佩服在下 -->
-            <TfmSpecificPackageFile Include="$(OutputPath)**" Exclude="$(OutputPath)*.*" PackagePath="lib\$(TargetFramework)" Condition="$(TargetFramework.Contains('-windows'))" />
+            <!-- 将本项目输出目录的所有子目录内容打包，写法保证只复制子目录不重复复制文件，无xaml文件，自创，佩服在下 -->
+            <TfmSpecificPackageFile Include="$(OutputPath)**" Exclude="$(OutputPath)**\*.xaml" PackagePath="lib\$(TargetFramework)" Condition="$(TargetFramework.Contains('-windows'))" />
         </ItemGroup>
     </Target>
 
