--- a/.gitignore
+++ b/.gitignore
@@ -354,8 +354,7 @@ Service/src/Dt.Cm/etc/model/
 Service/src/Dt.Msg/etc/log/
 Service/src/Dt.Fsm/etc/log/
 !Service/iis/tls.pfx 
-!Client/Dt.Mgr/Module/Publish/
-Package/
+Client/Dt.Core/Base/Tools/
 Packages/
 Publish/
 Doc/商店截图/
