--- a/Client/Directory.Build.props
+++ b/Client/Directory.Build.props
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <!-- 启用全局using -->
         <ImplicitUsings>enable</ImplicitUsings>
-        <NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252;NETSDK1206</NoWarn>
+        <NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252;NETSDK1206;SYSLIB0050</NoWarn>
         <!-- 始终禁止xbf嵌入到pri文件，默认debug时不嵌入，release时嵌入，嵌入时包升级会造成引用项目都必须重新编译 -->
         <DisableEmbeddedXbf>true</DisableEmbeddedXbf>
         <IsWin>false</IsWin>
@@ -117,6 +117,15 @@
         </ItemGroup>
     </Target>
 
+    <!-- WindowsAppSDK已内置，uno需要，否则xaml文件无法编译 -->
+    <ItemGroup Condition="!$(IsWin)">
+        <Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
+        <Compile Update="**\*.xaml.cs">
+            <DependentUpon>%(Filename)</DependentUpon>
+        </Compile>
+        <UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
+    </ItemGroup>
+    
     <!-- 包引用，独立文件方便升级 -->
     <Import Project="References.props" Condition="exists('References.props')" />
 </Project>
