--- a/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
+++ b/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0-ios</TargetFramework>
+        <TargetFrameworks>net8.0-ios</TargetFrameworks>
         <SingleProject>true</SingleProject>
         <OutputType>Exe</OutputType>
         <IsUnoHead>true</IsUnoHead>
@@ -38,10 +38,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Page Include="..\Dt.Shell.Win\App.xaml" Link="App.xaml" />
-        <Compile Include="..\Dt.Shell.Win\App.xaml.cs" Link="App.xaml.cs">
-            <DependentUpon>App.xaml</DependentUpon>
-        </Compile>
+        <ApplicationDefinition Include="..\Dt.Shell.Win\App.xaml" SubType="Designer" XamlRuntime="WinUI" Generator="MSBuild:Compile" Link="App.xaml" />
+        <Compile Include="..\Dt.Shell.Win\App.xaml.cs" XamlRuntime="WinUI" DependentUpon="App.xaml" Link="App.xaml.cs" />
         <BundleResource Include="..\Dt.Shell.Win\Assets\Fonts\*.ttf" Link="iOS\Resources\Assets\Fonts\%(Filename).ttf" />
         <BundleResource Include="..\Dt.Shell.Win\Assets\Lottie\*.json" Link="iOS\Resources\Assets\Lottie\%(Filename).json" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-20%402x.png" />
