--- a/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
+++ b/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
@@ -20,18 +20,19 @@
         <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
         <PackageCertificateThumbprint>2DC84FB810E184C9E4816A27D213E6E084C5D568</PackageCertificateThumbprint>
         <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
-        
+        <UseStub>true</UseStub>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
         <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
         <ProjectReference Include="..\Dt.Mgr\Dt.Mgr.csproj" />
-        <ProjectReference Include="..\Dt.MgrDemo\Dt.MgrDemo.csproj" />
+        <!--<ProjectReference Include="..\Dt.MgrDemo\Dt.MgrDemo.csproj" />-->
         <ProjectReference Include="..\Dt.UIDemo\Dt.UIDemo.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Dt.BuildTools" Version="1.3.8" />
         <PackageReference Include="Dt.Tasks" Version="3.0.0" />
     </ItemGroup>
 
