--- a/Client/References.props
+++ b/Client/References.props
@@ -2,7 +2,6 @@
     <!-- 公共引用包 -->
     <ItemGroup>
         <PackageReference Include="Dt.Infras" Version="3.1.0" />
-        <PackageReference Include="Dt.BuildTools" Version="1.3.7" PrivateAssets="none" />
         <!--高于7.0.9时wasm出错-->
         <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
@@ -69,4 +68,15 @@
         <!-- UseMauiEssentials已无用 -->
         <PackageReference Include="Microsoft.Maui.Essentials" Version="8.0.3" />
     </ItemGroup>
+
+    <!-- 引用包控制
+    IncludeAssets：将使用这些资产，默认 all
+    ExcludeAssets：不会使用这些资产，默认 none
+    PrivateAssets：将使用这些资产，但它们不会流入上级项目，默认 contentfiles;analyzers;build
+    
+    PrivateAssets="none" 用在 PackageReference 时，上级项目的包被更高级项目引用时，所有资产都会流入更高级项目
+    PrivateAssets="all" 用在 ProjectReference 时，避免打包上级项目时引用该项目的nuget包
+                   
+    所有选项：contentfiles analyzers build compile runtime buildTransitive native none all
+    -->
 </Project>
