--- a/Infras/Dt.Cells/Dt.Cells.csproj
+++ b/Infras/Dt.Cells/Dt.Cells.csproj
@@ -100,6 +100,7 @@
 		<ProjectReference Include="..\Dt.Pdf\Dt.Pdf.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.Charts\Dt.Charts.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.Cells.Data\Dt.Cells.Data.csproj" PrivateAssets="all" />
+        <ProjectReference Include="..\Dt.Toolkit\Dt.Toolkit.csproj" PrivateAssets="all" />
 	</ItemGroup>
 
     <ItemGroup Condition="$(TargetFramework.Contains('-ios'))">
