--- a/Infras/Directory.Build.props
+++ b/Infras/Directory.Build.props
@@ -91,8 +91,11 @@
     </Choose>
 
     <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-        <!-- 调试程序时使用github源文件，不使用本地源文件 -->
+        <!-- 和Deterministic配合，调试程序时使用github源文件，不使用本地源文件 -->
         <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <Deterministic>true</Deterministic>
+        <!-- .nuspec和.pdb文件增加源代码地址 -->
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <!-- .net8.0后其它设置不再需要，也不需Microsoft.SourceLink.GitHub包 -->
     </PropertyGroup>
 </Project>
