--- a/Infras/Dt.Toolkit/Dt.Toolkit.csproj
+++ b/Infras/Dt.Toolkit/Dt.Toolkit.csproj
@@ -5,7 +5,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
 
-    <ItemGroup Condition="exists('..\..\Tools\File\TestSqlFormatter.cs')">
-        <Compile Include="..\..\Tools\File\TestSqlFormatter.cs" Link="Sql\TestSqlFormatter.cs" />
+    <ItemGroup Condition="exists('..\..\..\Tools\File\TestSqlFormatter.cs')">
+        <Compile Include="..\..\..\Tools\File\TestSqlFormatter.cs" Link="Sql\TestSqlFormatter.cs" />
     </ItemGroup>
 </Project>
