--- a/Client/References.props
+++ b/Client/References.props
@@ -3,20 +3,25 @@
     <ItemGroup>
         <PackageReference Include="Dt.Infras" Version="4.0.3" />
         <PackageReference Include="ScottPlot" Version="5.0.40" />
-        <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.4" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.14" />
+        
+        <!-- 日志，两端版本相同 -->
         <PackageReference Include="Serilog" Version="3.1.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="2.0.0" />
-        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.14" />
-        <!-- Db -->
-        <PackageReference Include="Dapper" Version="2.1.28" />
+        
+        <!-- Db相关，两端版本相同 -->
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.11" />
         <PackageReference Include="MySqlConnector" Version="2.3.7" />
-        <!-- 高版本会造成 CoreWebView2 冲突 -->
+        <PackageReference Include="Npgsql" Version="8.0.5" />
+        <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.6.1" />
+        <!-- 高版本支持Azure，引用太多，且和 CoreWebView2 冲突，System.IdentityModel.Tokens.Jwt低版本有漏洞 -->
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.7" />
-        <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.140" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.36.0" />
+        <PackageReference Include="Dapper" Version="2.1.28" />
         <PackageReference Include="Dapper.Oracle" Version="2.0.3" />
-        <PackageReference Include="Npgsql" Version="8.0.3" />
+        
         <!-- 本地化，无用，造成win下引用uno不同版本，编译慢 -->
         <!-- <PackageReference Include="Uno.Extensions.Localization.WinUI" Version="4.0.0" /> -->
     </ItemGroup>
