--- a/Service/src/References.props
+++ b/Service/src/References.props
@@ -1,22 +1,28 @@
 ﻿<Project>
 	<ItemGroup>
-		<PackageReference Include="Dapper" Version="2.1.28" />
-		<PackageReference Include="MySqlConnector" Version="2.3.7" />
-		<PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.7" />
-		<PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.140" />
-		<PackageReference Include="Dapper.Oracle" Version="2.0.3" />
-		<PackageReference Include="Npgsql" Version="8.0.3" />
 		<PackageReference Include="Autofac" Version="6.5.0" />
 		<PackageReference Include="Castle.Core" Version="5.1.1" />
-		<PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.4" />
 		<PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
 		<PackageReference Include="Polly" Version="8.2.0" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.7.0" />
-		<PackageReference Include="Serilog" Version="3.1.1" />
-		<PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
-		<PackageReference Include="Serilog.Formatting.Compact" Version="2.0.0" />
-		<PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
-		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 		<PackageReference Include="StackExchange.Redis" Version="2.7.4" />
+		
+		<!-- 日志，两端版本相同 -->
+		<PackageReference Include="Serilog" Version="3.1.1" />
+		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+		<PackageReference Include="Serilog.Formatting.Compact" Version="2.0.0" />
+		<PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+		<PackageReference Include="Serilog.Settings.Configuration" Version="8.0.4" />
+		
+		<!-- Db相关，两端版本相同 -->
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.11" />
+		<PackageReference Include="MySqlConnector" Version="2.3.7" />
+		<PackageReference Include="Npgsql" Version="8.0.5" />
+		<PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.6.1" />
+		<!-- 高版本支持Azure，引用太多，且和 CoreWebView2 冲突，System.IdentityModel.Tokens.Jwt低版本有漏洞 -->
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.7" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.36.0" />
+		<PackageReference Include="Dapper" Version="2.1.28" />
+		<PackageReference Include="Dapper.Oracle" Version="2.0.3" />
 	</ItemGroup>
 </Project>
