--- a/Demo/Demo.Shared/Config.json
+++ b/Demo/Demo.Shared/Config.json
@@ -1,9 +1,10 @@
 ﻿{
   "Title": "搬运工",
 
-  // cm服务地址 或 直连数据库的键名
+  // cm服务地址 或 直连数据库的键名 或 sqlite库名
   "Server": "https://10.10.1.16:1234",
   //"Server": "pgdt",
+  //"Server": "sqlite/库名",
 
   // 可直连数据库列表
   "Database": {
