--- a/Demo/References.props
+++ b/Demo/References.props
@@ -17,14 +17,14 @@
 
 	<!-- 非windows引用包 -->
 	<ItemGroup Condition="!$(IsWin)">
-		<PackageReference Include="Uno.WinUI" Version="5.4.39" />
+		<PackageReference Include="Uno.WinUI" Version="6.0.465" />
 	</ItemGroup>
 	
 	<!-- 所有App引用 -->
 	<ItemGroup Condition="$(AppType) != ''">
 		<PackageReference Include="Dt.BuildTools" Version="1.4.1" PrivateAssets="none" />
 		<!-- 1.2 Splash不缩放 -->
-		<PackageReference Include="Uno.Resizetizer" Version="1.4.8" />
+		<PackageReference Include="Uno.Resizetizer" Version="1.8.1" />
 	</ItemGroup>
 	
 	<!-- App分类别引用，使用Choose无效 -->
@@ -34,27 +34,26 @@
 
 	<ItemGroup Condition="$(AppType) == 'android'">
 		<PackageReference Include="Xamarin.Google.Android.Material" Version="1.10.0.2" />
-		<!-- uno5.1.31提示缺 -->
-		<PackageReference Include="Xamarin.AndroidX.SwipeRefreshLayout" Version="1.1.0.17" />
 	</ItemGroup>
 	
 	<ItemGroup Condition="$(AppType) == 'gtk'">
-		<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="5.4.39" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.8" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.8" />
+		<PackageReference Include="Uno.WinUI.Runtime.Skia.Linux.FrameBuffer" Version="6.0.465" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="3.119.0" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="3.119.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(AppType) == 'wpf'">
-		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="5.4.39" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.8" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.8" />
+		<PackageReference Include="Uno.WinUI.Runtime.Skia.Wpf" Version="6.0.465" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="3.119.0" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="3.119.0" />
 	</ItemGroup>
 	
 	<ItemGroup Condition="$(AppType) == 'wasm'">
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="8.0.14" />
-		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.14" />
-		<PackageReference Include="Uno.WinUI.WebAssembly" Version="5.4.39" PrivateAssets="none" />
-		<PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" Version="5.4.39" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="8.0.23" />
+		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.23" />
+		<PackageReference Include="Uno.WinUI.WebAssembly" Version="6.0.465" PrivateAssets="none" />
+		<PackageReference Include="Uno.WinUI.Runtime.Skia.WebAssembly.Browser" Version="6.0.465" />
+		<PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" Version="6.0.465" />
 		<PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.7" />
 		<!-- 不引用link出错 -->
 		<PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.0" />
